kqed_dev4/src/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <formula>Contact.Account.Staff__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actions__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id &amp; &quot;/e?Status=Confirmed&amp;save=1&amp;retURL=&quot;
&amp; CampaignId &amp; &quot;%23&quot; &amp; CampaignId &amp; &quot;_RelatedCampaignMemberList_target&quot;, &quot;Conf&quot;, &quot;_self&quot;) 
&amp; &quot; | &quot; 
&amp; HYPERLINK(&quot;/&quot; &amp; Id &amp; &quot;/e?Status=Cancelled&amp;save=1&amp;retURL=&quot; 
&amp;  CampaignId &amp; &quot;%23&quot; &amp; CampaignId &amp; &quot;_RelatedCampaignMemberList_target&quot;, &quot;Cncl&quot;, &quot;_self&quot;)
&amp; &quot; | &quot; 
&amp; HYPERLINK(&quot;/&quot; &amp; Id &amp; &quot;/e?Status=Attended&amp;save=1&amp;retURL=&quot; 
&amp;  CampaignId &amp; &quot;%23&quot; &amp; CampaignId &amp; &quot;_RelatedCampaignMemberList_target&quot;, &quot;Att&quot;, &quot;_self&quot;)</formula>
        <inlineHelpText>Quick action links for RSVP activities. &apos;Conf&apos; = Confirm, &apos;Cncl&apos; = Cancel, &apos;Att&apos; = Attended</inlineHelpText>
        <label>Actions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Guests__c</fullName>
        <inlineHelpText>Will the attendee be bringing any additional guests?</inlineHelpText>
        <label>Additional Guests</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ask_Amount_1__c</fullName>
        <description>First ask amount associated with the solicitation of this donor/campaign.</description>
        <inlineHelpText>Enter the first ask amount associated with the solicitation of this donor to this campaign.</inlineHelpText>
        <label>Ask Amount 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ask_Amount_2__c</fullName>
        <description>First ask amount associated with the solicitation of this donor/campaign.</description>
        <inlineHelpText>Enter the secondary ask amount associated with the solicitation of this donor to this campaign.</inlineHelpText>
        <label>Ask Amount 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ask_Amount_3__c</fullName>
        <description>Third Ask amount associated with the solicitation of this donor/campaign.</description>
        <inlineHelpText>Enter the third ask amount associated with the solicitation of this donor to this campaign.</inlineHelpText>
        <label>Ask Amount 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ask_Readiness__c</fullName>
        <label>Ask Readiness</label>
        <picklist>
            <picklistValues>
                <fullName>Hot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expected_Amount__c</fullName>
        <label>Expected Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Genre__c</fullName>
        <label>Genre</label>
        <picklist>
            <picklistValues>
                <fullName>Arts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Children&apos;s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Science</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Household_For_Reports__c</fullName>
        <formula>Contact.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Household</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Household__c</fullName>
        <formula>HYPERLINK( &apos;/&apos; + Contact.AccountId  , Contact.Account.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Household</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invite_to_Events__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Should this person be invited to Events in addition to receiving Press Releases for this List Campaign?</inlineHelpText>
        <label>Invite to Events?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Moves_Management_Stage__c</fullName>
        <label>Moves Management Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Identification</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cultivation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Committed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negotiation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stewardship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Go Back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dropped</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <inlineHelpText>Is there a note related to this event?</inlineHelpText>
        <label>Note</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Address__c</fullName>
        <formula>HYPERLINK( &apos;/&apos; + Contact.Account.Preferred_Address__r.Id  ,  Contact.Account.Preferred_Address__r.Name  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preferred Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Solicitor__c</fullName>
        <label>Primary Solicitor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Show__c</fullName>
        <inlineHelpText>TV/Radio Program Show</inlineHelpText>
        <label>TV/Radio Program/Show</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <label>Purpose</label>
        <picklist>
            <picklistValues>
                <fullName>Closed Captioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discriptive Video Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outreach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Curriculm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Screening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Registered_Email__c</fullName>
        <inlineHelpText>The email address provided during registration.</inlineHelpText>
        <label>Registered Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <inlineHelpText>What role are they playing at this event?</inlineHelpText>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Band Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DJ LIaison</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KCRW Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Venue Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guest</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <inlineHelpText>Choose who added this person to this event.</inlineHelpText>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>General Manager (Jennifer)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Donors (Tracy)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archangel+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$500+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angel+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Music supporter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ticket buyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Artist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Press</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crew / Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Underwriting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DJ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stretch_Amount__c</fullName>
        <label>Stretch Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VIP__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this guest a VIP?</inlineHelpText>
        <label>VIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ask_amount1__c</fullName>
        <description>First ask amount associated with the solicitation of this donor/campaign.</description>
        <inlineHelpText>Enter the first ask amount associated with the solicitation of this donor to this campaign.</inlineHelpText>
        <label>ask_amount1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ask_amount2__c</fullName>
        <description>First ask amount associated with the solicitation of this donor/campaign.</description>
        <inlineHelpText>Enter the secondary ask amount associated with the solicitation of this donor to this campaign.</inlineHelpText>
        <label>ask_amount2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ask_amount3__c</fullName>
        <description>First ask amount associated with the solicitation of this donor/campaign.</description>
        <inlineHelpText>Enter the third ask amount associated with the solicitation of this donor to this campaign.</inlineHelpText>
        <label>ask_amount3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <recordTypes>
        <fullName>Campaign_Event_Member_Record_Type</fullName>
        <active>true</active>
        <description>This is used for event attendees using the Campaign Event Record Type.</description>
        <label>Event Campaign Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Campaign_Member_Record_Type</fullName>
        <active>true</active>
        <description>This is the default Campaign Member record type which is used by the default Campaign Record Type</description>
        <label>Campaign Member Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>PressList_Member_Record_Type</fullName>
        <active>true</active>
        <description>This is used for members of PressList Campaigns.</description>
        <label>PressList Member Record Type</label>
    </recordTypes>
</CustomObject>